#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


# SUBDIRS        = general hmatrix


aiidir        = $(pkgdatadir)/aii

aii_DATA = \
README \
aii_color_table.pro \
aii_epilogue.pro \
aii_klegend_d.pro \
aii_plot_file.pro \
aii_plot_legend.pro \
aii_plotsymbols.pro \
aii_prologue_l.pro \
plot_abs_per_tg.pro \
plot_vmr_per_tg.pro \
read_artsvar.pro \
read_datafile.pro \
read_tag_groups.pro \
showme.pro \
sort_abs.pro \
write_artsvar.pro \
write_datafile.pro


EXTRA_DIST = $(aii_DATA)
