#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


SUBDIRS        = general hmatrix


amidir        = $(pkgdatadir)/ami

ami_DATA = \
arts.m \
init.m \
read_artsvar.m \
read_datafile.m \
startup.m \
write_artsvar.m \
write_datafile.m \
get_artstype.m

EXTRA_DIST = $(ami_DATA)
